# skilo

./: .arkoudarc.toml  .coderabbit.yaml  .gitignore  .skilorc.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh  lefthook.yml
.claude/skills/add-lint-rule/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/fix-clippy/: SKILL.md
.claude/skills/prepare-release/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/use-skilo/: SKILL.md
.github/: pull_request_template.md
.github/actions/skillz/: action.yml
.github/workflows/: release.yml  skills.yml  skillz.yml
docs/adr/: 0001-skillz-cli-tool.md  0001-skilo-cli-tool.md  0002-rust-implementation.md  0003-markdown-table-formatting.md  0004-skill-installation-from-git.md  0005-multi-agent-support.md  0006-global-vs-project-installation.md  0007-skilo-cache-directory.md  0008-eval-subcommand.md
skills/add-lint-rule/: SKILL.md
skills/arkouda/: SKILL.md
skills/code-review/: EVAL.md  SKILL.md
skills/conventional-commits/: SKILL.md
skills/create-pull-request/: SKILL.md
skills/fix-clippy/: SKILL.md
skills/prepare-release/: SKILL.md
skills/run-tests/: SKILL.md
skills/use-arkouda/: SKILL.md
skills/use-skilo/: SKILL.md
src/: agent.rs  cli.rs  config.rs  error.rs  lang.rs  lib.rs  main.rs  scope.rs
src/commands/: add.rs  agents.rs  check.rs  completions.rs  eval.rs  fmt.rs  lint.rs  list.rs  mod.rs  new.rs  read_properties.rs  remove.rs  self_update.rs  to_prompt.rs
src/eval/: agent.rs  mod.rs  parser.rs  report.rs  runner.rs  scaffold.rs
src/eval/agents/: claude.rs  generic.rs  mod.rs  pi.rs
src/eval/categories/: functional.rs  mod.rs  perf.rs  trigger.rs
src/eval/graders/: contains.rs  exact.rs  mod.rs  regex_grader.rs  script.rs
src/git/: fetch.rs  mod.rs  source.rs
src/output/: json.rs  mod.rs  sarif.rs  text.rs
src/skill/: discovery.rs  formatter.rs  frontmatter.rs  manifest.rs  mod.rs  validator.rs
src/skill/rules/: body_length.rs  compatibility.rs  description.rs  mod.rs  name.rs  references.rs  scripts.rs
src/templates/: full.rs  hello_world.rs  minimal.rs  mod.rs  script_based.rs
