[package]
name = "skilo"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "CLI tool for Agent Skills development"
license = "MIT OR Apache-2.0"
keywords = ["agent", "skills", "cli", "ai"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/manuelmauro/skilo"
homepage = "https://github.com/manuelmauro/skilo"
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# Markdown
comrak = "0.34"

# File system
walkdir = "2"

# Output
colored = "2"

# Error handling
thiserror = "1"
miette = { version = "7", features = ["fancy"] }

# Utilities
regex = "1"
once_cell = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
