[package]
name = "skilo"
version = "0.7.0"
edition = "2021"
rust-version = "1.75"
description = "CLI tool for Agent Skills development"
license = "MIT OR Apache-2.0"
keywords = ["agent", "skills", "cli", "ai"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/manuelmauro/skilo"
homepage = "https://github.com/manuelmauro/skilo"
readme = "README.md"

[lints.rust]
missing_docs = "deny"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
colored = "2"
comrak = "0.34"
dialoguer = "0.11"
dirs = "5"
git2 = "0.19"
miette = { version = "7", features = ["fancy"] }
once_cell = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "1"
toml = "0.8"
url = "2"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
flate2 = "1"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
zip = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
